feat: 챌린지 과제

--- a/posts/templates/index.html
+++ b/posts/templates/index.html
@@ -6,6 +6,17 @@
     <title>Likelion</title>
 </head>
 <body>
-    <h1>Welcome Likelion 12th!</h1>
+    <h1>저와 제 코드리뷰 짝을 소개합니다!!</h1>
+    <h2>Me</h2>
+    <li>이름: {{myinfo_all.myname}}</li>
+    <li>나이: {{myinfo_all.myage}}</li>
+    <li>전공:</li>
+    <li>깃허브 링크:</li>
+
+    <h2>My Code Reviewer</h2>
+    <li>이름:</li>
+    <li>나이:</li>
+    <li>전공:</li>
+    <li>깃허브 링크:</li>
 </body>
 </html>
